project(EvolutionaryCreator)
cmake_minimum_required (VERSION 3.1)
# set(CMAKE_BUILD_TYPE Release)
# set(CMAKE_CXX_COMPILER "/usr/bin/clang++")
# set(CMAKE_C_COMPILER "/usr/bin/clang")
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_FLAGS_DEBUG "-O0 -g -DDEBUG -Wall -Wno-unused-function -Wno-int-in-bool-context -Wno-class-memaccess -Wno-unused-variable")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
set(CMAKE_CXX_FLAGS_RELEASE "-Ofast")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(PROJECT_ROOT ${PROJECT_SOURCE_DIR})
set(BUILD_ROOT ${CMAKE_BINARY_DIR})
message("Binary dir ${CMAKE_BINARY_DIR}")
# add_definitions(-DEVOLUTIONARY_DEBUG)
include_directories(src)
include_directories(dependencies)
include_directories(dependencies/imgui)
include_directories(dependencies/Evolutionary/dependencies)
include_directories(dependencies/Evolutionary/include)
add_library(imgui dependencies/imgui/imgui.cpp src/ui/ImGuiGlfw.cpp
            src/ui/ImGuiOpengl.cpp dependencies/imgui/imgui_draw.cpp
            dependencies/imgui/imgui_demo.cpp)
add_subdirectory(dependencies/Evolutionary)
add_subdirectory(src)